Prevent scrollbar from showing without scrollable content in cm-entity-list

--- a/src/components/cm-entity-list/cm-entity-list.scss
+++ b/src/components/cm-entity-list/cm-entity-list.scss
@@ -164,7 +164,7 @@
 	display: grid;
 	gap: 15px;
 	z-index: 1;
-	overflow-y: scroll;
+	overflow-y: auto;
 
 	.entity {
 		box-sizing: border-box;
